# python-module-jk-sysinfo

./: .gitignore  HISTORY.md  README.md  packageinfo.json  packageinfo.jsonc
documentation/: TODO.md  Tools Used.md
examples/: collector.py  collector_async.py  integrator.py  inxipy.py  sysmonctrl.py  sysmonctrl_remote.py
notes/: NOTES.md  TODO.md
src/: README.md  README.rst  pyproject.toml  setup.py
src/jk_sysinfo/: __init__.py  get_accesspoints.py  get_apt_list.py  get_apt_list_upgradable.py  get_bios_info.py  get_cpu_info.py  get_date.py  get_df.py  get_dmi_decode.py  get_docker_stats.py  get_dpkg_list.py  get_etc_group.py  get_etc_hostname.py  get_etc_os_release.py  get_etc_passwd.py  get_hdparm_I.py  get_ifconfig.py  get_lsb_release_a.py  get_lsblk.py  get_lshw.py  get_motherboard_info.py  get_mount.py  get_needs_reboot.py  get_net_info.py  get_pip3_list.py  get_proc_cpu_info.py  get_proc_cpuinfo.py  get_proc_load_avg.py  get_proc_meminfo.py  get_ps.py  get_ps_local.py  get_sensors.py  get_systemctl_units.py  get_uptime.py  get_user_info.py  get_vcgencmd.py  invoke_utils.py  parsing_utils.py  value_formatting.py
src/jk_sysinfo/OLD/: get_apt_list.py.old  get_os_data.py
src/jk_sysinfo/cli/: ServerCfg.py  __init__.py
src/jk_sysinfo/entity/: DriveInfo.py  DrivePartitionInfo.py  __init__.py
testing/: inxipy.py  test_get_apt_list.py  test_get_cpu_info.py  test_get_date.py  test_get_df.py  test_get_dmi_decode.py  test_get_etc_os_release.py  test_get_lsb_release_a.py  test_get_lsblk.py  test_get_lshw.py  test_get_mount.py  test_get_net_info.py  test_get_ps.py  (+7 more)
(+18 files in other folders)
